(QuickChat) Fixed: Overflowing issue

--- a/src/app/layout/common/quick-chat/quick-chat.component.scss
+++ b/src/app/layout/common/quick-chat/quick-chat.component.scss
@@ -1,5 +1,25 @@
 quick-chat {
     z-index: 399;
+
+    > div {
+        overflow: hidden;
+    }
+
+    &.quick-chat-opened {
+
+        > div {
+            overflow: visible;
+        }
+    }
+
+    :not(&.quick-chat-opened) {
+
+        > div {
+            overflow: visible;
+            animation: addOverflowHidden 1ms linear 400ms;
+            animation-fill-mode: forwards;
+        }
+    }
 }
 
 /* Adjustments depending on the selected layout */
@@ -23,4 +43,16 @@ quick-chat {
     z-index: 299;
     opacity: 1;
     background-color: transparent;
+}
+
+@keyframes addOverflowHidden {
+    0% {
+        overflow: visible
+    }
+    99% {
+        overflow: visible;
+    }
+    100% {
+        overflow: hidden;
+    }
 }
